<resources>
    <string name="app_name">Sample App</string>
    <string name="welcome">Welcome Home, What shall you do?</string>

    <string name="todo">TODO</string>
    <string name="camera">Open Camera</string>
    <string name="gallery">Open Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="todo1">TODO</string>
    <string name="pick_photo">pick photo</string>
    <string name="upload">Upload</string>
</resources>